# aeroscraper-code

./: .env.example  .replit  Anchor.toml  DEPLOYMENT_INSTRUCTIONS.md  ORACLE_DEVNET_DEPLOYMENT_GUIDE.md  README.md  next.config.js  package.json
Aeroscraper-Solana/: .gitignore  .replit  DEVNET_COLLATERAL_SETUP.md  TEST_COVERAGE_ANALYSIS.md  package-lock.json  replit.md
Aeroscraper-Solana/programs/aerospacer-protocol/: Cargo.toml  README.md
Aeroscraper-Solana/programs/aerospacer-protocol/src/: oracle.rs  sorted_troves.rs
Aeroscraper-Solana/programs/aerospacer-protocol/src/error/: mod.rs
Aeroscraper-Solana/programs/aerospacer-protocol/src/instructions/: add_collateral.rs  initialize.rs  mod.rs  open_trove.rs  query_liquidatable_troves.rs  redeem.rs  remove_collateral.rs  repay_loan.rs  update_protocol_addresses.rs
Aeroscraper-Solana/programs/aerospacer-protocol/src/query/: mod.rs
Aeroscraper-Solana/programs/aerospacer-protocol/src/state/: mod.rs
aeroscraper-contracts/: .envrc  FEE_ADDRESSES.md  package-lock.json  replit.md  setup-info.sh
aeroscraper-contracts/programs/aerospacer-oracle/: Cargo.toml
aeroscraper-contracts/programs/aerospacer-oracle/src/: lib.rs  msg.rs
aeroscraper-contracts/programs/aerospacer-oracle/src/instructions/: get_config.rs  mod.rs  set_data.rs  update_pyth_price.rs
aeroscraper-frontend/: .env  .env.example  next.config.js  package-lock.json  package.json  tailwind.config.js
aerospacer-solana/: .env.example  FEE_INTEGRATION_SUMMARY.md  PROTOCOL_TESTING_STATUS.md  STABILITY_POOL_FLOW.md  STAKING_ADDRESS.md  (+1 more)
programs/aerospacer-fees/: Cargo.toml
programs/aerospacer-fees/src/: lib.rs
(+309 files in other folders)
