[package]
name = "aerospacer-protocol"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
anchor-debug = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
init-if-needed = ["anchor-lang/init-if-needed"]
default = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
spl-token = "4.0.0"
aerospacer-oracle = { path = "../aerospacer-oracle", features = ["cpi"] }
aerospacer-fees = { path = "../aerospacer-fees", features = ["cpi"] }